--- a/panels/network/cc-wifi-connection-row.ui
+++ b/panels/network/cc-wifi-connection-row.ui
@@ -2,68 +2,41 @@
 <!-- Generated with glade 3.20.0 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
-  <template class="CcWifiConnectionRow" parent="GtkListBoxRow">
-    <property name="visible">True</property>
-    <property name="can_focus">True</property>
-    <child>
+  <template class="CcWifiConnectionRow" parent="AdwActionRow">
+    <property name="activatable">True</property>
+    <child type="prefix">
       <object class="GtkBox">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="margin_start">12</property>
-        <property name="margin_end">12</property>
-        <property name="hexpand">True</property>
-        <property name="spacing">6</property>
+        <property name="valign">center</property>
+        <property name="margin_end">6</property>
         <child>
           <object class="GtkCheckButton" id="checkbutton">
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">False</property>
             <property name="halign">start</property>
             <property name="valign">center</property>
-            <property name="draw_indicator">True</property>
-            <child>
-              <placeholder/>
-            </child>
+            <property name="margin_end">6</property>
           </object>
         </child>
         <child>
-          <object class="GtkBox">
-            <property name="visible">True</property>
-            <property name="valign">center</property>
-            <property name="margin_right">6</property>
-            <child>
-              <object class="GtkImage" id="strength_icon">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="icon_name">network-wireless-signal-excellent-symbolic</property>
-                <property name="icon_size">1</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkImage" id="encrypted_icon">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="valign">end</property>
-              </object>
-            </child>
+          <object class="GtkImage" id="strength_icon">
+            <property name="icon_name">network-wireless-signal-excellent-symbolic</property>
+            <property name="icon_size">1</property>
           </object>
         </child>
         <child>
-          <object class="GtkLabel" id="name_label">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="halign">start</property>
-            <property name="hexpand">True</property>
-            <property name="margin_top">12</property>
-            <property name="margin_bottom">12</property>
-            <property name="label" translatable="no">Connection/SSID</property>
-            <property name="ellipsize">end</property>
+          <object class="GtkImage" id="encrypted_icon">
+            <property name="valign">end</property>
+            <property name="pixel-size">8</property>
           </object>
         </child>
+      </object>
+    </child>
+
+    <child type="suffix">
+      <object class="GtkBox">
+        <property name="valign">center</property>
+        <property name="margin_start">6</property>
+        <property name="spacing">6</property>
         <child>
           <object class="GtkLabel" id="active_label">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
             <property name="margin_end">6</property>
             <property name="label" translatable="yes">Connected</property>
             <style>
@@ -74,8 +47,6 @@
         <child>
           <object class="GtkSpinner" id="connecting_spinner">
             <property name="name">connecting_spinner</property>
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
             <property name="halign">center</property>
             <property name="valign">center</property>
           </object>
@@ -83,31 +54,17 @@
         <child>
           <object class="GtkButton">
             <property name="name">options_button</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
+            <property name="icon_name">emblem-system-symbolic</property>
             <property name="halign">center</property>
             <property name="valign">center</property>
             <signal name="clicked" handler="configure_clicked_cb" object="CcWifiConnectionRow" swapped="yes"/>
-            <child>
-              <object class="GtkImage">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="icon_name">emblem-system-symbolic</property>
-                <property name="icon_size">1</property>
-              </object>
-            </child>
-            <child internal-child="accessible">
-              <object class="AtkObject">
-                <property name="AtkObject::accessible-name" translatable="yes">Options…</property>
-              </object>
-            </child>
-            <style>
-              <class name="image-button"/>
-            </style>
+            <accessibility>
+              <property name="label" translatable="yes">Options…</property>
+            </accessibility>
           </object>
         </child>
       </object>
     </child>
+
   </template>
 </interface>
