--- a/panels/network/connection-editor/8021x-security-page.ui
+++ b/panels/network/connection-editor/8021x-security-page.ui
@@ -2,8 +2,6 @@
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <template class="CEPage8021xSecurity" parent="GtkGrid">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
     <property name="margin_start">50</property>
     <property name="margin_end">50</property>
     <property name="margin_top">12</property>
@@ -14,49 +12,34 @@
     <property name="column_spacing">6</property>
     <child>
       <object class="GtkLabel" id="security_label">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
         <property name="xalign">1</property>
         <property name="label" translatable="yes">802.1x _Security</property>
         <property name="use_underline">True</property>
         <property name="mnemonic_widget">enable_8021x_switch</property>
+        <layout>
+          <property name="column">0</property>
+          <property name="row">0</property>
+        </layout>
       </object>
-      <packing>
-        <property name="left_attach">0</property>
-        <property name="top_attach">0</property>
-        <property name="width">1</property>
-        <property name="height">1</property>
-      </packing>
     </child>
     <child>
       <object class="GtkSwitch" id="enable_8021x_switch">
-        <property name="visible">True</property>
-        <property name="can_focus">True</property>
         <property name="halign">start</property>
         <property name="hexpand">True</property>
+        <layout>
+          <property name="column">1</property>
+          <property name="row">0</property>
+        </layout>
       </object>
-      <packing>
-        <property name="left_attach">1</property>
-        <property name="top_attach">0</property>
-        <property name="width">1</property>
-        <property name="height">1</property>
-      </packing>
     </child>
     <child>
       <object class="GtkBox" id="box">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
-        <child>
-          <placeholder/>
-        </child>
+        <layout>
+          <property name="column">0</property>
+          <property name="row">1</property>
+        </layout>
       </object>
-      <packing>
-        <property name="left_attach">0</property>
-        <property name="top_attach">1</property>
-        <property name="width">2</property>
-        <property name="height">1</property>
-      </packing>
     </child>
   </template>
 </interface>
