--- a/panels/network/connection-editor/connection-editor.ui
+++ b/panels/network/connection-editor/connection-editor.ui
@@ -2,22 +2,16 @@
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <template class="NetConnectionEditor" parent="GtkDialog">
-    <property name="can_focus">False</property>
-    <property name="border_width">0</property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="default_width">500</property>
     <property name="default_height">300</property>
-    <property name="type_hint">dialog</property>
     <!-- This doesn't seem to work for a template, so it is also hardcoded. -->
     <property name="use_header_bar">1</property>
-    <signal name="delete-event" handler="delete_event_cb" swapped="yes"/>
+    <signal name="close-request" handler="close_request_cb" swapped="yes"/>
     <child type="action">
       <object class="GtkButton" id="cancel_button">
         <property name="label" translatable="yes">_Cancel</property>
-        <property name="visible">True</property>
-        <property name="can_focus">True</property>
-        <property name="receives_default">True</property>
         <property name="use_underline">True</property>
         <signal name="clicked" handler="cancel_clicked_cb" object="NetConnectionEditor" swapped="yes"/>
       </object>
@@ -25,83 +19,49 @@
     <child type="action">
       <object class="GtkButton" id="apply_button">
         <property name="label" translatable="yes">_Apply</property>
-        <property name="visible">True</property>
-        <property name="can_focus">True</property>
-        <property name="can_default">True</property>
-        <property name="receives_default">True</property>
         <property name="use_underline">True</property>
         <signal name="clicked" handler="apply_clicked_cb" object="NetConnectionEditor" swapped="yes"/>
       </object>
     </child>
-    <child internal-child="vbox">
+    <child>
       <object class="GtkBox">
-        <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <property name="spacing">0</property>
-        <property name="border_width">0</property>
         <child>
           <object class="GtkStack" id="toplevel_stack">
-            <property name="visible">True</property>
+            <property name="hexpand">True</property>
+            <property name="vexpand">True</property>
             <child>
               <object class="GtkSpinner" id="spinner">
-                <property name="visible">True</property>
-                <property name="active">True</property>
+                <property name="spinning">True</property>
               </object>
             </child>
             <child>
               <object class="GtkNotebook" id="notebook">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
                 <property name="show_border">False</property>
               </object>
             </child>
             <child>
               <object class="GtkBox" id="add_connection_box">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
                 <property name="vexpand">True</property>
                 <child>
                   <object class="GtkBox">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="orientation">vertical</property>
+                    <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
+                    <property name="orientation">vertical</property>
                     <child>
-                      <object class="GtkFrame" id="add_connection_frame">
-                        <property name="width_request">300</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="label_xalign">0</property>
-                        <property name="shadow_type">in</property>
+                      <object class="AdwBin" id="add_connection_frame">
+                        <property name="hexpand">True</property>
                         <property name="vexpand">True</property>
+                        <property name="width_request">300</property>
                         <property name="valign">start</property>
-                        <child>
-                          <placeholder/>
-                        </child>
                       </object>
-                      <packing>
-                        <property name="expand">True</property>
-                        <property name="fill">True</property>
-                        <property name="position">0</property>
-                      </packing>
                     </child>
                   </object>
-                  <packing>
-                    <property name="expand">True</property>
-                    <property name="position">0</property>
-                  </packing>
                 </child>
               </object>
-              <packing>
-                <property name="position">1</property>
-              </packing>
             </child>
           </object>
-          <packing>
-            <property name="expand">True</property>
-            <property name="fill">True</property>
-            <property name="position">1</property>
-          </packing>
         </child>
       </object>
     </child>
