--- a/panels/network/network-ethernet.ui
+++ b/panels/network/network-ethernet.ui
@@ -2,17 +2,12 @@
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <template class="NetDeviceEthernet" parent="GtkBox">
-    <property name="can_focus">False</property>
     <property name="spacing">6</property>
     <property name="orientation">vertical</property>
     <child>
       <object class="GtkBox">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
         <child>
           <object class="GtkLabel" id="device_label">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
             <property name="hexpand">True</property>
             <property name="xalign">0</property>
             <property name="label" translatable="yes">Wired</property>
@@ -24,18 +19,11 @@
         </child>
         <child>
           <object class="GtkButton">
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
-            <property name="relief">none</property>
+            <property name="icon_name">list-add-symbolic</property>
             <signal name="clicked" handler="add_profile_button_clicked_cb" object="NetDeviceEthernet" swapped="yes"/>
-            <child>
-              <object class="GtkImage">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="icon_name">list-add-symbolic</property>
-              </object>
-            </child>
+            <style>
+              <class name="flat" />
+            </style>
           </object>
         </child>
       </object>
@@ -43,21 +31,15 @@
 
     <child>
       <object class="GtkBox">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <property name="spacing">6</property>
         <child>
           <object class="GtkScrolledWindow" id="scrolled_window">
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
             <property name="hexpand">True</property>
             <property name="hscrollbar_policy">never</property>
             <property name="vscrollbar_policy">never</property>
-            <property name="shadow_type">in</property>
             <child>
               <object class="GtkListBox" id="connection_list">
-                <property name="visible">True</property>
                 <property name="selection-mode">none</property>
                 <signal name="row-activated" handler="connection_list_row_activated_cb" object="NetDeviceEthernet" swapped="yes"/>
               </object>
@@ -67,53 +49,32 @@
 
         <!-- Single profile row -->
         <child>
-          <object class="GtkFrame" id="details_frame">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="expand">True</property>
+          <object class="GtkListBox" id="details_listbox">
+            <property name="selection_mode">none</property>
+            <style>
+              <class name="content" />
+            </style>
             <child>
-              <object class="GtkListBox">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="selection_mode">none</property>
+              <object class="AdwActionRow" id="details_row">
+                <property name="selectable">False</property>
+                <property name="title">Cable unplugged</property>
                 <child>
-                  <object class="HdyActionRow" id="details_row">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="selectable">False</property>
-                    <property name="title">Cable unplugged</property>
-                    <child>
-                      <object class="GtkSwitch" id="device_off_switch">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="halign">end</property>
-                        <property name="valign">center</property>
-                        <signal name="notify::active" handler="device_off_switch_changed_cb" object="NetDeviceEthernet" swapped="yes"/>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkButton" id="details_button">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">True</property>
-                        <property name="halign">end</property>
-                        <property name="valign">center</property>
-                        <signal name="clicked" handler="details_button_clicked_cb" object="NetDeviceEthernet" swapped="yes"/>
-                        <child>
-                          <object class="GtkImage">
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="icon-name">emblem-system-symbolic</property>
-                          </object>
-                        </child>
-                        <child internal-child="accessible">
-                          <object class="AtkObject">
-                            <property name="accessible-name" translatable="yes">Options…</property>
-                          </object>
-                       </child>
-                     </object>
-                    </child>
+                  <object class="GtkSwitch" id="device_off_switch">
+                    <property name="halign">end</property>
+                    <property name="valign">center</property>
+                    <signal name="notify::active" handler="device_off_switch_changed_cb" object="NetDeviceEthernet" swapped="yes"/>
                   </object>
+                </child>
+                <child>
+                  <object class="GtkButton" id="details_button">
+                    <property name="halign">end</property>
+                    <property name="valign">center</property>
+                    <property name="icon-name">emblem-system-symbolic</property>
+                    <signal name="clicked" handler="details_button_clicked_cb" object="NetDeviceEthernet" swapped="yes"/>
+                    <accessibility>
+                      <property name="label" translatable="yes">Options…</property>
+                    </accessibility>
+                 </object>
                 </child>
               </object>
             </child>
