--- a/panels/network/wireless-security/ws-wpa-eap.ui
+++ b/panels/network/wireless-security/ws-wpa-eap.ui
@@ -49,30 +49,28 @@
     </data>
   </object>
   <template class="WirelessSecurityWPAEAP" parent="GtkGrid">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
     <property name="column_spacing">6</property>
     <property name="row_spacing">6</property>
     <child>
       <object class="GtkLabel" id="auth_label">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
         <property name="xalign">1</property>
         <property name="label" translatable="yes">Au_thentication</property>
         <property name="use_underline">True</property>
         <property name="mnemonic_widget">auth_combo</property>
+        <layout>
+          <property name="column">0</property>
+          <property name="row">0</property>
+        </layout>
       </object>
-      <packing>
-        <property name="left_attach">0</property>
-        <property name="top_attach">0</property>
-      </packing>
     </child>
     <child>
       <object class="GtkComboBox" id="auth_combo">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
         <property name="hexpand">True</property>
         <property name="model">auth_model</property>
+        <layout>
+          <property name="column">1</property>
+          <property name="row">0</property>
+        </layout>
         <child>
           <object class="GtkCellRendererText"/>
           <attributes>
@@ -80,25 +78,16 @@
           </attributes>
         </child>
       </object>
-      <packing>
-        <property name="left_attach">1</property>
-        <property name="top_attach">0</property>
-      </packing>
     </child>
     <child>
       <object class="GtkBox" id="method_box">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
-        <child>
-          <placeholder/>
-        </child>
+        <layout>
+          <property name="column">0</property>
+          <property name="column-span">2</property>
+          <property name="row">1</property>
+        </layout>
       </object>
-      <packing>
-        <property name="left_attach">0</property>
-        <property name="width">2</property>
-        <property name="top_attach">1</property>
-      </packing>
     </child>
   </template>
 </interface>
